# devise-stats

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/api/: analytics.py  dependencies.py  devices.py  measurements.py  users.py
src/migrations/: env.py
src/migrations/versions/: 308d8a3e4035_meas_model.py  38900269d43b_add_users_model.py  670ae4ea7933_fix_and_add_meas_model.py  eaa2202e222d_add_device_model.py
src/models/: devices.py  measurements.py  users.py
src/repositories/: base.py  devices.py  measurements.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: analytics.py  devices.py  measurements.py  users.py
src/services/: analytics.py  auth.py  base.py  devices.py  measurements.py  users.py
src/tasks/: analytics_tasks.py  celery_app.py
src/utils/: database.py  exceptions.py
tests/: locustfile.py
