[project]
name = "device-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "alexander111222-max",email = "shurak26@bk.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "celery[redis] (==5.6.2)",
    "locust (>=2.43.4,<3.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
